tests/liberr/liberr.exp
Library type error:
libs/type_error.js:2
  2: declare function foo(x: number): Array;
                                      ^^^^^ Incorrect number of type parameters (expected 1)

a.js:5
  5: var x: string = 0;
                     ^ number. This type is incompatible with
  5: var x: string = 0;
            ^^^^^^ string


Found 2 errors
